@@ -5,6 +5,7 @@ xapianincludedir = $(includedir)/xapian
 include_HEADERS = xapian.h
 
 xapianinclude_HEADERS = xapian/base.h xapian/database.h xapian/dbfactory.h \
+ xapian/deprecated.h \
  xapian/document.h xapian/enquire.h xapian/error.h xapian/errorhandler.h \
  xapian/errortypes.h xapian/expanddecider.h xapian/output.h \
  xapian/positioniterator.h xapian/postingiterator.h xapian/query.h \
