@@ -742,9 +742,10 @@ class Enquire {
 
 	/** For compatibility with Xapian 0.8.5 and earlier.
 	 *
-	 *  Now deprecated, please use set_docid_order() instead.
+	 *  @deprecated	This method is now deprecated, use set_docid_order()
+	 *  instead.
 	 */
-	void set_sort_forward(bool sort_forward) {
+	XAPIAN_DEPRECATED(void set_sort_forward(bool sort_forward)) {
 	    set_docid_order(sort_forward ? ASCENDING : DESCENDING);
 	}
 
@@ -770,11 +771,12 @@ class Enquire {
 
 	/** For compatibility with Xapian 0.8.5 and earlier.
 	 *
-	 *  Now deprecated, please use set_sort_by_relevance(), set_sort_by_value(), or
+	 *  @deprecated This method is now deprecated, use
+	 *  set_sort_by_relevance(), set_sort_by_value(), or
 	 *  set_sort_by_value_then_relevance() instead.
 	 */
-	void set_sorting(Xapian::valueno sort_key, int sort_bands,
-			 bool sort_by_relevance = false) {
+	XAPIAN_DEPRECATED(void set_sorting(Xapian::valueno sort_key, int sort_bands,
+			 bool sort_by_relevance = false)) {
 	    if (sort_bands > 1) {
 		throw Xapian::UnimplementedError("sort bands are no longer supported");
 	    }
